--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
   "name": "music-bot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bot.js",
-    "devStart": "nodemon bot.js"
+    "dev:start": "nodemon bot.js"
   },
-  "author": "",
+  "author": "milan090",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "discord-ytdl-core": "^4.0.8",
     "discord.js": "^12.3.1",
-    "ffmpeg": "0.0.4",
-    "ffmpeg-static": "^4.2.7",
-    "fluent-ffmpeg": "^2.1.2",
-    "jshint": "^2.12.0",
-    "knex": "^0.21.5",
-    "pg": "^8.3.3",
-    "prism-media": "^1.2.2",
-    "youtube-api-v3-search": "^1.2.1"
+    "yt-search": "^2.3.1"
   },
   "devDependencies": {
+    "eslint": "^7.10.0",
     "nodemon": "^2.0.4"
   }
 }
