--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/opus": "^0.3.2",
     "discord-ytdl-core": "^4.0.8",
     "discord.js": "^12.3.1",
+    "rnd-song": "^1.0.2",
     "yt-search": "^2.3.1"
   },
   "devDependencies": {
