--- a/example_config.json
+++ b/example_config.json
@@ -1,5 +1,5 @@
 {
   "prefix": "^",
   "token": "DISCORD_TOKEN",
-  "api_key": "MUSIC_API_KEY"
+  "api_key": "fb85e5241d0691760ddbac9e0aa691e0"
   }
